[gd_scene load_steps=6 format=3 uid="uid://ddd4qbwvdrfrp"]

[ext_resource type="Script" path="res://Components/dialogue_component.gd" id="1_2ws8m"]

[sub_resource type="Animation" id="Animation_bvarf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogueContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tk7st"]
resource_name = "hide_dialogue"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -60), Vector2(0, -36.165)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogueContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_6ovsj"]
resource_name = "show_dialogue"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -36.165), Vector2(0, -60), Vector2(0, -60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogueContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pmqmb"]
_data = {
"RESET": SubResource("Animation_bvarf"),
"hide_dialogue": SubResource("Animation_tk7st"),
"show_dialogue": SubResource("Animation_6ovsj")
}

[node name="DialogueComponent" type="Area2D"]
position = Vector2(0, -10)
collision_layer = 0
script = ExtResource("1_2ws8m")

[node name="BaloonTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DialogueContainer" type="CenterContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 86.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
use_top_left = true
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="DialogueContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogueContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="DialogueContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Some text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pmqmb")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="BaloonTimer" to="." method="_on_text_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
